# bestman

./: AGENTS.md  readme.md  test.py
bestman/: CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
bestman/.github/: ISSUE_TEMPLATE.md
bestman/assets/configs/: xarm6_template.yaml
bestman/docs/: index.md  installation.md  usage.md
bestman/src/bestman/: __init__.py
bestman/src/bestman/camera/: config.py
bestman/src/bestman/robots/: __init__.py  base_robot.py  config.py  factory.py
bestman/src/bestman/robots/startouch/: __init__.py  bestman_startouch.py  startouch_config.py
bestman/src/bestman/robots/startouch/SDK/: CMakeLists.txt  pybind_0825testfast.cpp  readme.md  start_can.sh
bestman/src/bestman/robots/startouch/SDK/interface_py/: 1_merged_trajectory.txt  1_startouch_replay.py  2_gripper_test.py  3_Repeated_positioning.py  4_Multiple_controls.py  __init__.py  gravity.py  ik.py  lerobot_ow_left_arm.py  lerobot_ow_right_arm.py  lerobot_single_arm_tele.py  lerobot_two_arm_inference.py  startouchclass.py  test_gripper_raw.py  test_hardware.py
bestman/src/bestman/robots/startouch/startouch_sdk/: __init__.py  startouchclass.py
bestman/src/bestman/robots/utils/: __init__.py  math_utils.py
bestman/src/bestman/robots/xarm/: __init__.py  bestman_xarm.py  xarm_config.py
bestman/src/bestman/utils/: __init__.py  file_utils.py  utils.py
bestman/src/bestman/utils/replayer/: replayer.py
bestman/tests/: __init__.py  test_bestman.py
examples/replay/: replay.py
examples/startouch/: 00_init_from_class.py  04_move_eef.py  05_gripper_test.py
examples/xarm/xarm6/: 00_init_from_class.py  xarm6_config.yaml
examples/xarm/xarm7/: 00_init_from_class.py  00_init_from_factory.py  01_get_joint_status.py  02_move_joints.py  03_read_eef.py  04_move_eef.py  04_move_eef_quat.py  04_move_eef_rpy.py  05_tcp_offset.py  06_servo_joints.py  07_servo_eef.py  07_servo_eef_rpy.py  xarm7_config.yaml
test/: __init__.py
